--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://192.168.68.197:3306/cracker?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Kaja@0005
+spring.datasource.url=jdbc:postgresql://192.168.68.197:5432/cracker?createDatabaseIfNotExist=true
+spring.datasource.username=postgres
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
