--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,12 @@
 		</dependency>
 
 		<dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.26</version>
+                <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+        <version>42.6.0</version> <!-- Make sure to use the latest version -->
+</dependency>
+
        </dependency>
 
 		<dependency>
