--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://192.168.68.194:5432/cracker
+spring.datasource.url=jdbc:postgresql://192.168.68.194:5432/jinthan
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+ 
