--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://192.168.68.218:5432/postgres
+spring.datasource.url=jdbc:postgresql://192.168.1.15:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
  
