--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://192.168.1.15:5432/postgres?connectTimeout=120
+spring.datasource.url=jdbc:postgresql://192.168.1.15:5432/cracker?connectTimeout=120
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
